--- a/_config.yml
+++ b/_config.yml
@@ -13,16 +13,16 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: DIN Rail Planner
+title: Bootstrap 4 Github Pages
 email: ""
 description: >- # this means to ignore newlines until "baseurl:"
-  A tool for designing DIN Rail Systems
+  A Bootstrap 4 start up project for Jekyll and Github Pages
 #baseurl: "" # the subpath of your site, e.g. /blog
 #url: "" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
 #github_username:  jekyll
 
-repository: "roycepope/dinrailplanner"
+repository: "nicolas-van/bootstrap-4-github-pages"
 
 # Build settings
 plugins:
